update configuration files
Signed-off-by: Christopher Hall <hsw@ms2.hinet.net>

--- a/cqterm.conf
+++ b/cqterm.conf
@@ -1,4 +1,4 @@
-# conlecterm configuration
+# cqterm configuration
 
 # %ID% is replaced by decimal window ID
 commands {
@@ -14,29 +14,69 @@ commands {
     option = "-pe"
     option = "default,-tabbed"
   }
+  emacs {
+    program = "emacs"
+    option = "--parent-id"
+    option = "%ID%"
+  }
+  gvim {
+    program = "gvim"
+    option = "-g"
+    option = "--socketid"
+    option = "%ID%"
+  }
 }
 
 tab [
-{
-  name = shell
-  run = urxvt
-}
+  {
+    name = shell
+    run = urxvt
+  }
 
-{
-  name = cqterm
-  run = urxvt
-  directory = ~/qt/conlecterm
-}
+  {
+    name = cqterm
+    run = urxvt
+    directory = ~/qt/conlecterm
+  }
 
-{
-  name = emacs.d
-  run = urxvt
-  directory = .emacs.d
-}
+  {
+    name = emacs.d
+    run = urxvt
+    directory = .emacs.d
+  }
 
-{
-  name = root
-  run = urxvt
-  send-line = exec sudo -i -u toor
-}
+  {
+    name = root
+    run = urxvt
+    send-line = exec sudo -i -u toor
+  }
+
+  {
+    name = "Shell"
+    run = urxvt
+    directory = /home
+  }
+
+  {
+    name = "shell"
+    run = urxvt
+    directory = "/tmp"
+  }
+
+  {
+    name = "EMACS"
+    run = emacs
+  }
+
+  {
+    name = "xterm-etc"
+    run = xterm
+    directory = "/etc"
+  }
+
+  {
+    name = "Vi IMproved"
+    run = gvim
+  }
+
 ]
