--- a/cqterm.desktop
+++ b/cqterm.desktop
@@ -9,6 +9,6 @@ Exec=cqterm
 GenericName[en_GB]=Multi tabbed terminal handler
 GenericName=Multi tabbed terminal handler
 Icon=utilities-terminal
-Name[en_GB]=cqterm
-Name=cqterm
+Name[en_GB]=CQterm
+Name=CQterm
 Terminal=false
