setup default configurations
If no coinfiguration prompt to install from internal defaults
Some tidy up of EMACS modes
Change delay and retry resize on startup

Signed-off-by: Christopher Hall <hsw@ms2.hinet.net>

--- a/cqterm.conf
+++ b/cqterm.conf
@@ -36,7 +36,7 @@ tab [
   {
     name = cqterm
     run = urxvt
-    directory = ~/qt/conlecterm
+    directory = cqterm
   }
 
   {
@@ -52,13 +52,13 @@ tab [
   }
 
   {
-    name = "Shell"
+    name = "Shell (/home)"
     run = urxvt
     directory = /home
   }
 
   {
-    name = "shell"
+    name = "shell (/tmp)"
     run = urxvt
     directory = "/tmp"
   }
