allow setting of tab bar dimensions in the config file
change run arrow to SVG to allow it to be scaled

Signed-off-by: Christopher Hall <hsw@ms2.hinet.net>

--- a/cqterm.conf
+++ b/cqterm.conf
@@ -1,5 +1,16 @@
 # cqterm configuration
 
+# configure the tab bar sizes
+layout {
+  tab-width = 140
+  tab-height = 24
+  h-margin = 4
+  v-margin = 2
+  icon-width = 10
+  icon-height = 10
+  font-points = 12
+}
+
 # %ID% is replaced by decimal window ID
 commands {
   xterm {
